Add two line forms

--- a/public/forms.html
+++ b/public/forms.html
@@ -244,6 +244,25 @@
                   </fieldset>
                 </div>
 
+                <div class="example-box-plain">
+                  <fieldset>
+                    <label for="exampleInputFile">Radio buttons (description)</label>
+                    <label class="radio radio--block">
+                      <input type="radio" name="radio" value="option1" checked>
+                      <p><span>Yes</span><br>You are in situation A</p>
+                    </label>
+                    <label class="radio radio--block">
+                      <input type="radio" name="radio" value="option2">
+                      <p><span>Yes</span><br>You are in situation B</p>
+                    </label>
+                    <label class="radio radio--block">
+                      <input type="radio" name="radio" value="option3">
+                      <p><span>No</span><br>I'm not in any situation</p>
+
+                    </label>
+                  </fieldset>
+                </div>
+
 
 
                 <div class="example-box-plain">
