Improved form consistency
- Made all form elements and buttons the same height
- Tidied forms.less further
- Moved button styles to buttons.less

--- a/public/forms.html
+++ b/public/forms.html
@@ -211,16 +211,13 @@
                   <fieldset>
                     <label for="exampleInputFile">Radio buttons</label>
                     <label class="radio radio--block">
-                      <input type="radio" name="radio" value="option1" checked>
-                      Yes
+                      <input type="radio" name="radio" value="option1" checked>Yes
                     </label>
                     <label class="radio radio--block">
-                      <input type="radio" name="radio" value="option2">
-                      No
+                      <input type="radio" name="radio" value="option2">No
                     </label>
                     <label class="radio radio--block disabled">
-                      <input type="radio" name="radio" value="option3" disabled>
-                      Not sure
+                      <input type="radio" name="radio" value="option3" disabled>Not sure
                     </label>
                   </fieldset>
                 </div>
@@ -228,17 +225,14 @@
                 <div class="example-box-plain">
                   <fieldset>
                     <label for="exampleInputFile">Inline Radio buttons</label>
-                    <label class="radio--inline">
-                      <input type="radio" name="radio-inline" value="option1" checked>
-                      Yes
+                    <label class="radio radio--inline">
+                      <input type="radio" name="radio-inline" value="option1" checked>Yes
                     </label>
-                    <label class="radio--inline">
-                      <input type="radio" name="radio-inline" value="option2">
-                      No
+                    <label class="radio radio--inline">
+                      <input type="radio" name="radio-inline" value="option2">No
                     </label>
-                    <label class="radio--inline disabled">
-                      <input type="radio" name="radio-inline" value="option3" disabled>
-                      Not sure
+                    <label class="radio radio--inline disabled">
+                      <input type="radio" name="radio-inline" value="option3" disabled>Not sure
                     </label>
                   </fieldset>
                 </div>
@@ -265,13 +259,13 @@
                   <fieldset>
                     <label for="exampleInputFile">Checkboxes</label>
                     <label class="checkbox checkbox--block">
-                      <input type="checkbox" name="checkbox"> Option one
+                      <input type="checkbox" name="checkbox">Option one
                     </label>
                     <label class="checkbox checkbox--block">
-                      <input type="checkbox" name="checkbox"> Option two
+                      <input type="checkbox" name="checkbox">Option two
                     </label>
                     <label class="checkbox checkbox--block disabled">
-                      <input type="checkbox" name="checkbox" disabled> Disabled
+                      <input type="checkbox" name="checkbox" disabled>Disabled
                     </label>
                   </fieldset>
                 </div>
@@ -280,13 +274,13 @@
                   <fieldset>
                     <label for="exampleInputFile">Inline checkboxes</label>
                     <label class="checkbox checkbox--inline">
-                      <input type="checkbox" name="checkbox"> Option one
+                      <input type="checkbox" name="checkbox">Option one
                     </label>
                     <label class="checkbox checkbox--inline">
-                      <input type="checkbox" name="checkbox"> Option two
+                      <input type="checkbox" name="checkbox">Option two
                     </label>
                     <label class="checkbox checkbox--inline disabled">
-                      <input type="checkbox" name="checkbox" disabled> Disabled
+                      <input type="checkbox" name="checkbox" disabled>Disabled
                     </label>
                   </fieldset>
                 </div>
