Add toolbar page to guidelines

--- a/public/index.html
+++ b/public/index.html
@@ -106,6 +106,7 @@
                       <li><a href="layout.html">Layout</a></li>
                       <ul>
                           <li><a href="long-form.html">Long form content</a></li>
+                          <li><a href="toolbar.html">Content toolbar</a></li>
                       </ul>
                       <li><a href="typography.html">Typography</a></li>
                       <li><a href="colours.html">Colours</a></li>
