--- a/public/toolbar.html
+++ b/public/toolbar.html
@@ -6,23 +6,30 @@
     <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
     <meta charset="utf-8">
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
+    <meta content="" name="keywords">
+    <meta content="" name="description">
 
-    <title>Social sharing</title>
+    <title>Citizens Advice style guide</title>
+
+  <!-- Mobile Specific Metas
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <meta content="width=device-width, initial-scale=1, maximum-scale=2.0" name="viewport">
     <meta content="48a2415d-980f-4763-a5b9-e10e000636b3" name="cab-guid">
     <meta content="EWS" name="cab-extent">
     <meta content="/static/images/apple-touch-icon.png">
     <meta content="B53C5C20449FC2233D3862B4DBEDFA3E" name="msvalidate.01">
+
+  <!-- Stylesheet
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="css/site.css" media="screen" rel="stylesheet">
     <link href="css/print.css" media="print" rel="stylesheet">
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="https://www.citizensadvice.org.uk/static/css/print.css" media="print" rel="stylesheet">
     <link href="https://www.citizensadvice.org.uk/static/layout/favicon.ico" rel="shortcut icon">
     <link href="https://www.citizensadvice.org.uk/static/images/apple-touch-icon.png" rel="apple-touch-icon">
-    <meta content="" name="keywords">
-    <meta content="" name="description"><!-- Revealables -->
 
-    <script type="text/javascript" src="http://code.jquery.com/jquery-1.6.min.js"></script>
+  <!-- Javascript
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <script src="../libs/javascript/vendor/jquery-1.11.3.min.js"></script>
     <script src="../libs/javascript/beta-dap-accordion.js"></script>
     <script src="../libs/javascript/sticky-nav.js"></script><!-- Sticky Navigation JS -->
@@ -31,8 +38,7 @@
     <script src="../libs/javascript/vendor/jquery.sticky.js"></script>
 </head>
 
-<body class="beta">
-<!-- Test this for capturing User agent, may be a better way of doing this server side -->
+<body>
 <script>
 var txt = "";
 txt += "<p>Browser CodeName: " + navigator.appCodeName + "</p>";
@@ -67,10 +73,10 @@ document.getElementById("demo").innerHTML = txt;
     </div>
 
     <header class="main-header">
-        <div class="main-header__content">
-            <a class="main-header__logo" href="" title="Citizens Advice home"><img alt="Citizens Advice" onerror="this.onerror=null;this.src=&#39;/Static/images/logos/ca-logo_100px.svg.png&#39;;" src="assets/images/ca-logo_100px.svg"></a>
+        <div class="main-header__content main-content">
+            <a class="main-header__logo no-print" href="" title="Citizens Advice home"><img alt="Citizens Advice" onerror="this.onerror=null;this.src=&#39;/Static/images/logos/ca-logo_100px.svg.png&#39;;" src="assets/images/ca-logo_100px.svg"></a><img class="print-only logo" src="assets/images/ca-logo-hz-280px.svg">
 
-            <div class="main-header__links" data-track-zone="top-bar">
+            <!--div class="main-header__links" data-track-zone="top-bar">
                 <a class="main-header__menu-link js-toggle-menu" href=""><i class="icon-menu"></i>Menu</a>
 
                 <nav class="main-header__top-nav">
@@ -80,72 +86,18 @@ document.getElementById("demo").innerHTML = txt;
                 <form action="" class="main-header__search hide-offline">
                     <label class="screenreader" for="main-header__search__input">Search</label> <input class="main-header__search__input" id="main-header__search__input" name="q" placeholder="" type="search"> <button class="main-header__search__submit" title="Search" type="submit"><i class="icon-search icon--no-text"></i> <span class="screenreader">Search</span></button>
                 </form>
-            </div>
+            </div -->
+
         </div>
     </header><!-- MEGA MENU -->
 
-    <nav class="main-nav" data-track-zone="main-nav" style="overflow: visible;">
-        <ul class="nav-list-primary">
-            <li class="top-item js-mega-menu" style="display: list-item;">
-                <a href="#">Benefits</a>
-            </li>
-
-            <li class="top-item js-mega-menu" style="display: list-item;">
-                <a href="#">Work</a>
-            </li>
-
-            <li class="top-item js-mega-menu" style="display: list-item;">
-                <a href="#">Debt and money</a>
-            </li>
-
-            <li class="top-item js-mega-menu" style="display: list-item;">
-                <a href="#">Consumer</a>
-            </li>
-
-            <li class="top-item js-mega-menu" style="display: list-item;">
-                <a href="#">Relationships</a>
-            </li>
-
-            <li class="top-item js-mega-menu" style="display: list-item;">
-                <a href="#">Housing</a>
-            </li>
-
-            <li class="top-item js-mega-menu" style="display: list-item;">
-                <a href="#">Law and rights</a>
-            </li>
-
-            <li class="top-item js-mega-menu" style="display: list-item;">
-                <a href="#">Discrimination</a>
-            </li>
-
-            <li class="top-item js-mega-menu" style="display: list-item;">
-                <a href="#">Tax</a>
-            </li>
-
-            <li class="top-item js-mega-menu" style="display: list-item;">
-                <a href="#">Healthcare</a>
-            </li>
-
-            <li class="top-item js-mega-menu" style="display: list-item;">
-                <a href="#">Education</a>
-            </li>
-
-            <li class="top-item js-mega-menu" style="display: list-item;">
-                <a href="#">More from us</a>
-            </li>
-
-            <li class="nav-list-primary-more js-more-menu" style="display: none;">
-                <a href="#">More<i class="icon-down"></i></a>
-
-                <ul class="main-nav__more-links"></ul>
-            </li>
-        </ul>
-    </nav>
-
     <div class="main-container">
-        <nav class="main-breadcrumb" data-track-zone="breadcrumb">
-            <div class="main-breadcrumb__content breadcrumb">
-                <span class="breadcrumb__item"><a href="#">Consumer</a></span> <span class="breadcrumb__item"><i class="icon-guillemet-right"></i><a>Buying a used car</a></span>
+        <nav class="main-breadcrumb">
+            <div class="main-breadcrumb__content">
+                <span class="breadcrumb__item"><a href="#">Home</a></span>
+                <span class="breadcrumb__item"><i class="icon-guillemet-right"></i><a href="index.html">Digital guide</a></span>
+                <span class="breadcrumb__item"><i class="icon-guillemet-right"></i><a>Layout</a></span>
+                <span class="breadcrumb__item"><i class="icon-guillemet-right"></i><a>Toolbar</a></span>
             </div>
         </nav>
 
@@ -162,10 +114,10 @@ document.getElementById("demo").innerHTML = txt;
                 <!-- MAIN CONTENT -->
 
                 <div class="title">
-                    <h1 class="title__heading js-ref"><span class="title__title">Social Sharing</span></h1>
+                    <h1 class="title__heading js-ref"><span class="title__title">Toolbar</span></h1>
                     <div class="title__subheading">
                         This advice is for
-                        <a href="" id="showSimpleModal" class="btn btn-primary-outline">England</a>
+                        <button type="button" id="showSimpleModal" class="btn btn-primary-outline">England</button>
                         <!-- Other buttons
                         <a href="" id="showSimpleModal" class="btn btn-primary-outline">Scotland</a>
                         <a href="" id="showSimpleModal" class="btn btn-primary-outline">Wales</a>
@@ -202,7 +154,7 @@ document.getElementById("demo").innerHTML = txt;
                                       <input type="radio" name="radio" value="?lang=cy">Northern Ireland
                                     </label>
                                   </fieldset>
-                                  <button type="submit" class="btn btn-primary" id="closeSimple">Continue <span class="right-button-icon"></span></button>
+                                  <button type="submit" class="btn btn-primary right-button-icon" id="closeSimple">Continue</button>
                               </form>
                         </div>
                 </div>
@@ -244,16 +196,13 @@ document.getElementById("demo").innerHTML = txt;
             <nav class="side-nav-beta">
                 <ul class="">
                     <li class="side-nav-beta__heading">
-                        <a href=""><span>Cars and vehicles</span></a>
+                        <a href=""><span>Layout</span></a>
+                    </li>
+                    <li class="side-nav-beta__sibling">
+                        <a href="long-form.html"><span>Long form content</span></a>
                     </li>
                     <li class="side-nav-beta__sibling active">
-                        <a href=""><span>Buying a used car</span></a>
-                    </li>
-                    <li class="side-nav-beta__sibling">
-                        <a href=""><span>Problem with a used car</span></a>
-                    </li>
-                    <li class="side-nav-beta__sibling">
-                        <a href=""><span>Problem with a car repair</span></a>
+                        <a href=""><span>Toolbar</span></a>
                     </li>
                     </li>
                 </ul>
@@ -261,173 +210,9 @@ document.getElementById("demo").innerHTML = txt;
 
         </div>
     </div>
-
-    <aside class="footer-feedback">
-        <h2 class="screenreader">Feedback</h2>
-
-        <div class="footer-feedback__content">
-            <p>Is there anything wrong with this page? <a href="#">Let us know</a>.&nbsp;</p>
-        </div>
-    </aside>
-
     <footer class="main-footer" data-track-zone="footer" id="footer">
         <div class="main-footer__content flex-row js-equal-height">
-            <div class="main-footer__box col-md-3 col-sm-6">
-                <h2>Advice</h2>
-
-                <ul class="li--arrow">
-                    <li>
-                        <a href="#">Benefits</a>
-                    </li>
-
-                    <li>
-                        <a href="#">Work</a>
-                    </li>
-
-                    <li>
-                        <a href="#">Debt and money</a>
-                    </li>
-
-                    <li>
-                        <a href="#">Consumer</a>
-                    </li>
-
-                    <li>
-                        <a href="#">Relationships</a>
-                    </li>
-
-                    <li>
-                        <a href="#">Housing</a>
-                    </li>
-
-                    <li>
-                        <a href="#">Law and rights</a>
-                    </li>
-
-                    <li>
-                        <a href="#">Discrimination</a>
-                    </li>
-
-                    <li>
-                        <a href="#">Tax</a>
-                    </li>
-
-                    <li>
-                        <a href="#">Healthcare</a>
-                    </li>
-
-                    <li>
-                        <a href="#">Education</a>
-                    </li>
-
-                    <li>
-                        <a href="#">A to Z of advice</a>
-                    </li>
-                </ul>
-            </div>
-
-            <div class="main-footer__box col-md-3 col-sm-6">
-                <h2>Resources and tools</h2>
-
-                <ul class="li--arrow">
-                    <li>
-                        <a href="#">Budgeting tool</a>
-                    </li>
-
-                    <li>
-                        <a href="#">Advice fact sheets</a>
-                    </li>
-
-                    <li>
-                        <a href="#">Advice online, by phone and in person</a>
-                    </li>
-                </ul>
-            </div>
-
-            <div class="main-footer__box col-md-3 col-sm-6">
-                <h2>More from us</h2>
-
-                <ul class="li--arrow">
-                    <li>
-                        <a href="#">About us</a>
-                    </li>
-
-                    <li>
-                        <a href="#">Annual reports</a>
-                    </li>
-
-                    <li>
-                        <a href="#">Contact us</a>
-                    </li>
-
-                    <li>
-                        <a href="#">Complaints</a>
-                    </li>
-
-                    <li>
-                        <a href="#">Blogs</a>
-                    </li>
-
-                    <li>
-                        <a href="#">Campaigns</a>
-                    </li>
-
-                    <li>
-                        <a href="#">Media</a>
-                    </li>
-
-                    <li>
-                        <a href="#">Policy research</a>
-                    </li>
-
-                    <li>
-                        <a href="#">Support us</a>
-                    </li>
-
-                    <li>
-                        <a href="#">Volunteering</a>
-                    </li>
-
-                    <li>
-                        <a href="#">Jobs</a>
-                    </li>
-                </ul>
-            </div>
-
-            <div class="main-footer__box col-md-3 col-sm-6">
-                <h2>About Citizens Advice</h2>
-
-                <ul class="li--arrow">
-                    <li>
-                        <a href="#">How we provide advice</a>
-                    </li>
-
-                    <li>
-                        <a href="#">The difference we make</a>
-                    </li>
-
-                    <li>
-                        <a href="#">Support us</a>
-                    </li>
-
-                    <li>
-                        <a href="#">How Citizens Advice works</a>
-                    </li>
-
-                    <li>
-                        <a href="#">Accessibility</a>
-                    </li>
-
-                    <li>
-                        <a href="#">Disclaimer and copyright</a>
-                    </li>
-
-                    <li>
-                        <a href="#">Privacy and cookies</a>
-                    </li>
-                </ul>
-            </div>
-
+    
             <div class="main-footer__box main-footer__box--copyright">
                 <div>
                     <p><img alt="" height="100" src="assets/images/ca-logo_100px.svg.png" width="100"> Copyright © 2015 Citizens Advice. All rights reserved.<br>
@@ -436,6 +221,7 @@ document.getElementById("demo").innerHTML = txt;
                     Registered office: Citizens Advice, 3rd Floor North, 200 Aldersgate, London, EC1A 4HD</p>
                 </div>
             </div>
+
         </div>
     </footer>
 </body>
