Add benefits tool for show and tell

--- a/public/callout.html
+++ b/public/callout.html
@@ -147,6 +147,7 @@
                       <h3>Callout quote</h3>
                       <p><code>div.callout--quote</code></p>
                       <p>Also referred to as Blockquote, this style is when a quote needs to be displayed.</p>
+                      <a class="callout__link"><code>a.callout__link</code></a>
                     </div>
 
                     <h2>Callouts combined</h2>
