--- a/public/benefits-tool.html
+++ b/public/benefits-tool.html
@@ -140,7 +140,7 @@
 
                 <div class="title">
                     <h1 class="title__heading js-ref"><span class="title__title">Benefits entitlement</span></h1>
-                    <div class="title__subheading">
+                    <div class="title__subheading no-print">
                         This advice is for
                         <a href="" id="showSimpleModal" class="btn btn-primary-outline">England</a>
                         <!-- Other buttons
