--- a/public/collapse.html
+++ b/public/collapse.html
@@ -21,10 +21,8 @@
 
   <!-- Stylesheet
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="css/site.css" media="screen" rel="stylesheet">
     <link href="css/print.css" media="print" rel="stylesheet">
-    <link href="https://www.citizensadvice.org.uk/static/css/print.css" media="print" rel="stylesheet">
     <link href="https://www.citizensadvice.org.uk/static/layout/favicon.ico" rel="shortcut icon">
     <link href="https://www.citizensadvice.org.uk/static/images/apple-touch-icon.png" rel="apple-touch-icon">
 
@@ -32,9 +30,6 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <script src="../libs/javascript/vendor/jquery-1.11.3.min.js"></script>
     <script src="../libs/javascript/beta-dap-accordion.js"></script>
-    <script src="../libs/javascript/sticky-nav.js"></script><!-- Sticky Navigation JS -->
-    <script src="../libs/javascript/nav-active.js"></script><!-- Navigation Updating JS -->
-    <script src="../libs/javascript/collapse.js"></script><!-- Accordion JS -->
     <script src="../libs/javascript/vendor/jquery.sticky.js"></script>
     <script src="../libs/javascript/core.js"></script>
 </head>
@@ -150,8 +145,8 @@
                           </div>
                       </div>
 
-                      <section class="revealable">
-                        <h3 id="h-argument-1---you-did-the-activity-that-the-dwp-says-you-didn-t-do" class="revealable__heading" aria-controls="revealable-1" tabindex="0" aria-expanded="true" title="Expand section">
+                      <section class="js-revealable revealable">
+                        <h3 id="h-argument-1---you-did-the-activity-that-the-dwp-says-you-didn-t-do" class="js-ref revealable__heading" aria-controls="revealable-1" tabindex="0" aria-expanded="true" title="Expand section">
                           <i class="revealable__icon" aria-hidden="true"></i>Argument 1 - You did the activity that the DWP says you didn't do
                         </h3>
                         <div class="revealable__content" id="revealable-1" aria-expanded="false" aria-hidden="true">
