--- a/public/collapse.html
+++ b/public/collapse.html
@@ -21,8 +21,10 @@
 
   <!-- Stylesheet
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="css/site.css" media="screen" rel="stylesheet">
     <link href="css/print.css" media="print" rel="stylesheet">
+    <link href="https://www.citizensadvice.org.uk/static/css/print.css" media="print" rel="stylesheet">
     <link href="https://www.citizensadvice.org.uk/static/layout/favicon.ico" rel="shortcut icon">
     <link href="https://www.citizensadvice.org.uk/static/images/apple-touch-icon.png" rel="apple-touch-icon">
 
@@ -30,7 +32,7 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <script src="../libs/javascript/vendor/jquery-1.11.3.min.js"></script>
     <script src="../libs/javascript/beta-dap-accordion.js"></script>
-    <script src="../libs/javascript/vendor/jquery.sticky.js"></script>
+    <script src="../libs/javascript/collapse.js"></script><!-- Accordion JS -->
     <script src="../libs/javascript/core.js"></script>
 </head>
 
@@ -145,11 +147,11 @@
                           </div>
                       </div>
 
-                      <section class="js-revealable revealable">
-                        <h3 id="h-argument-1---you-did-the-activity-that-the-dwp-says-you-didn-t-do" class="js-ref revealable__heading" aria-controls="revealable-1" tabindex="0" aria-expanded="true" title="Expand section">
+                      <section class="revealable">
+                        <h3 id="h-argument-1---you-did-the-activity-that-the-dwp-says-you-didn-t-do" class="revealable__heading" aria-controls="revealable-1" tabindex="0" aria-expanded="true" title="Expand section">
                           <i class="revealable__icon" aria-hidden="true"></i>Argument 1 - You did the activity that the DWP says you didn't do
                         </h3>
-                        <div class="revealable__content" id="revealable-1" aria-expanded="false" aria-hidden="true">
+                        <div class="revealable__content" id="revealable-1" aria-expanded="false" aria-hidden="false">
                           <p>If you did do the tasks that the DWP says you didn’t, you should ask the DWP to&nbsp;reconsider the decision to sanction you. You’ll have to give them evidence that you did the tasks. For example, a copy of your application form for a job, or a letter from a company confirming you attended training or work experience.</p><a href="#" class="revealable__close"><i class="icon-chevron-up" aria-hidden="true"></i>Close</a>
                         </div>
                         <h3 id="h-argument-2---you-did-the-activity-that-the-dwp-says-you-didn-t-do" class="revealable__heading" aria-controls="revealable-2" tabindex="0" aria-expanded="false" title="Expand section">
