--- a/public/callout.html
+++ b/public/callout.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!-- saved from url=(0106)https://www.citizensadvice.org.uk/benefits/universal-credit/before-you-apply/universal-credit-eligibility/ -->
 
 <html class="js hide-cookie-monster" lang="en-GB">
 <head>
@@ -30,6 +29,7 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <script src="../libs/javascript/vendor/jquery-1.11.3.min.js"></script>
     <script src="../libs/javascript/beta-dap-accordion.js"></script>
+    <script src="../libs/javascript/collapse.js"></script><!-- Accordion JS -->
 </head>
 
 <body>
