--- a/public/index.html
+++ b/public/index.html
@@ -108,6 +108,7 @@
                           <li><a href="long-form.html">Long form content</a></li>
                           <li><a href="toolbar.html">Content toolbar</a></li>
                       </ul>
+                      <li><a href="tables.html">Tables</a></li>
                       <li><a href="typography.html">Typography</a></li>
                       <li><a href="colours.html">Colours</a></li>
                       <li><a href="callout.html">Callout</a></li>
