Bug fixes on share icon styles

--- a/public/long-form.html
+++ b/public/long-form.html
@@ -106,6 +106,7 @@
                         <a class="a-social-print" href="javascript:window.print();" data-track="Print">Print</a>
                     
                         <a class="a-social-references" href="#!" data-track="References">References</a>
+                        <span class="info-extent">EWNIS</span>
                     </div>
                 </div>
 
