--- a/public/long-form.html
+++ b/public/long-form.html
@@ -106,7 +106,9 @@
                         <a class="a-social-print" href="javascript:window.print();" data-track="Print">Print</a>
                     
                         <a class="a-social-references" href="#!" data-track="References">References</a>
-                        <span class="info-extent">EWNIS</span>
+                        <span class="info-extent">Extent</span>
+                        <span class="info-reviewed">Reviewed</span>
+                        <span class="info-owner">Owner</span>
                     </div>
                 </div>
 
