Added stars to reference links

--- a/public/long-form.html
+++ b/public/long-form.html
@@ -91,7 +91,16 @@
                 <!-- MAIN CONTENT -->
 
                 <div class="title">
-                    <h1 class="title__heading js-ref"><span class="title__title">Example of a long form advice content page</span></h1>
+                    <h1 class="title__heading ref-heading">
+                        <span class="ref-heading__heading">
+                            <span class="title__title">
+                                Example of a long form advice content page
+                            </span>
+                        </span>
+                        <span class="ref-heading__toggle ref-heading__toggle--off">
+                            <a class="js-toggle-ref" href="#!">Add reference</a>
+                        </span>
+                    </h1>
                     <div class="title__subheading">
                         This advice is for
                         <a href="" id="showSimpleModal" class="btn btn-primary-outline">England</a>
@@ -108,7 +117,7 @@
                         <a class="a-social-references" href="#!" data-track="References">References</a>
                         <span class="info-extent">Extent</span>
                         <span class="info-reviewed">Reviewed</span>
-                        <span class="info-owner">Owner</span>
+                        <span class="info-owner">EWNIS</span>
                     </div>
                 </div>
 
@@ -134,8 +143,14 @@
                             </div>
                         </div>
                         <section id="step1">
-                            <h2>First use of &lt;h2&gt; in content</h2>
-
+                            <h2 id="h-what-you-could-get-from-the-airline" class="ref-heading">
+                                <span class="ref-heading__heading">
+                                    First use of &lt;h2&gt; in content
+                                </span>
+                                <span class="ref-heading__toggle ref-heading__toggle--on">
+                                    <a class="js-toggle-ref" href="#!">Added</a>
+                                </span>
+                            </h2>
                             <h3>Example of content</h3>
                             <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
                         </section>
