Changed old callouts to use :extend rather than reproducing the mixin.

--- a/public/callout.html
+++ b/public/callout.html
@@ -115,14 +115,14 @@
 
                     <div class="callout--confirmation callout--icon">
                       <h3>Callout confirmation</h3>
-                      <p><code>div.callout--confirmation</code></p>
+                      <p><code>div.callout--confirmation.callout--icon</code></p>
                       <p>This callout is used to confirm an action as correct or where the content needs to act as positive reinforcement of the informaiton i.e. 'Do apply for this if…'</p>
                       <a class="callout__link"><code>a.callout__link</code></a>
                     </div>
 
-                    <div class="callout--warning callout--icon">
+                    <div class="callout--warning">
                       <h3>Callout warning</h3>
-                      <p><code>div.callout--warning.callout--icon</code></p>
+                      <p><code>div.callout--warning</code></p>
                       <p>Use the Aria tag <code>aria-label="Important"</code>.</p>
                       <p>The warning callout should be used for any important snippet of text that has serious and/or legal implications if the client does not follow the advice.</p>
                       <a class="callout__link"><code>a.callout__link</code></a>
