Updated instructional text inside callouts for icon usage

--- a/public/callout.html
+++ b/public/callout.html
@@ -117,6 +117,7 @@
                       <h3>Callout confirmation</h3>
                       <p><code>div.callout--confirmation.callout--icon</code></p>
                       <p>This callout is used to confirm an action as correct or where the content needs to act as positive reinforcement of the informaiton i.e. 'Do apply for this if…'</p>
+                      <p>The icon is optional and can be including by adding the <code>.callout--icon</code> class.</p>
                       <a class="callout__link"><code>a.callout__link</code></a>
                     </div>
 
@@ -133,6 +134,7 @@
                       <p><code>div.callout--alert.callout--icon</code></p>
                       <p>Use the Aria tag <code>aria-label="Help"</code>.</p>
                       <p>This callout style should be applied on information which is important and will have implications on the client if they do understand and follow the advice but it isn't mandatory and won't have legal implications they don't follow.</p>
+                      <p>The icon is optional and can be including by adding the <code>.callout--icon</code> class.</p>
                       <a class="callout__link"><code>a.callout__link</code></a>
                     </div>
 
