--- a/public/long-form.html
+++ b/public/long-form.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!-- saved from url=(0106)https://www.citizensadvice.org.uk/benefits/universal-credit/before-you-apply/universal-credit-eligibility/ -->
 
 <html class="js hide-cookie-monster" lang="en-GB">
 <head>
@@ -9,7 +8,7 @@
     <meta content="" name="keywords">
     <meta content="" name="description">
 
-    <title>Citizens Advice style guide</title>
+    <title>Citizens Advice style guide - Long form content</title>
 
   <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -21,10 +20,8 @@
 
   <!-- Stylesheet
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="css/site.css" media="screen" rel="stylesheet">
     <link href="css/print.css" media="print" rel="stylesheet">
-    <link href="https://www.citizensadvice.org.uk/static/css/print.css" media="print" rel="stylesheet">
     <link href="https://www.citizensadvice.org.uk/static/layout/favicon.ico" rel="shortcut icon">
     <link href="https://www.citizensadvice.org.uk/static/images/apple-touch-icon.png" rel="apple-touch-icon">
 
@@ -32,10 +29,10 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <script src="../libs/javascript/vendor/jquery-1.11.3.min.js"></script>
     <script src="../libs/javascript/beta-dap-accordion.js"></script>
+    <script src="../libs/javascript/collapse.js"></script><!-- Accordion JS -->
 </head>
 
 <body>
-
     <div class="skip-nav">
         <a class="screenreader screenreader--focusable" href="">Skip to content</a> <a class="screenreader screenreader--focusable" href="">Skip to footer</a>
     </div>
@@ -260,22 +257,38 @@
         </div>
     </div>
 
+<!DOCTYPE html>
 
+<html class="js hide-cookie-monster" lang="en-GB">
+<head>
+    <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
+    <meta charset="utf-8">
+    <meta content="IE=edge" http-equiv="X-UA-Compatible">
+    <meta content="" name="keywords">
+    <meta content="" name="description">
 
+    <title>Citizens Advice style guide - Long form content</title>
 
-    <footer class="main-footer" data-track-zone="footer" id="footer">
-        <div class="main-footer__content flex-row js-equal-height">
-    
-            <div class="main-footer__box main-footer__box--copyright">
-                <div>
-                    <p><img alt="" height="100" src="assets/images/ca-logo_100px.svg.png" width="100"> Copyright © 2015 Citizens Advice. All rights reserved.<br>
-                    Citizens Advice is an operating name of the National Association of Citizens Advice Bureaux. Registered charity number 279057<br>
-                    VAT number 726 0202 76 Company limited by guarantee. Registered number 1436945 England<br>
-                    Registered office: Citizens Advice, 3rd Floor North, 200 Aldersgate, London, EC1A 4HD</p>
-                </div>
-            </div>
+  <!-- Mobile Specific Metas
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+    <meta content="width=device-width, initial-scale=1, maximum-scale=2.0" name="viewport">
+    <meta content="48a2415d-980f-4763-a5b9-e10e000636b3" name="cab-guid">
+    <meta content="EWS" name="cab-extent">
+    <meta content="/static/images/apple-touch-icon.png">
+    <meta content="B53C5C20449FC2233D3862B4DBEDFA3E" name="msvalidate.01">
 
-        </div>
-    </footer>
-</body>
-</html>
+  <!-- Stylesheet
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+    <link href="css/site.css" media="screen" rel="stylesheet">
+    <link href="css/print.css" media="print" rel="stylesheet">
+    <link href="https://www.citizensadvice.org.uk/static/layout/favicon.ico" rel="shortcut icon">
+    <link href="https://www.citizensadvice.org.uk/static/images/apple-touch-icon.png" rel="apple-touch-icon">
+
+  <!-- Javascript
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+    <script src="../libs/javascript/vendor/jquery-1.11.3.min.js"></script>
+    <script src="../libs/javascript/beta-dap-accordion.js"></script>
+    <script src="../libs/javascript/collapse.js"></script><!-- Accordion JS -->
+</head>
+
+<body>
