--- a/public/typography.html
+++ b/public/typography.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!-- saved from url=(0106)https://www.citizensadvice.org.uk/benefits/universal-credit/before-you-apply/universal-credit-eligibility/ -->
 
 <html class="js hide-cookie-monster" lang="en-GB">
 <head>
@@ -9,7 +8,7 @@
     <meta content="" name="keywords">
     <meta content="" name="description">
 
-    <title>Citizens Advice style guide</title>
+    <title>Citizens Advice style guide - Typography</title>
 
   <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -21,10 +20,8 @@
 
   <!-- Stylesheet
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="css/site.css" media="screen" rel="stylesheet">
     <link href="css/print.css" media="print" rel="stylesheet">
-    <link href="https://www.citizensadvice.org.uk/static/css/print.css" media="print" rel="stylesheet">
     <link href="https://www.citizensadvice.org.uk/static/layout/favicon.ico" rel="shortcut icon">
     <link href="https://www.citizensadvice.org.uk/static/images/apple-touch-icon.png" rel="apple-touch-icon">
 
@@ -32,14 +29,10 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <script src="../libs/javascript/vendor/jquery-1.11.3.min.js"></script>
     <script src="../libs/javascript/beta-dap-accordion.js"></script>
-    <script src="../libs/javascript/sticky-nav.js"></script><!-- Sticky Navigation JS -->
-    <script src="../libs/javascript/nav-active.js"></script><!-- Navigation Updating JS -->
     <script src="../libs/javascript/collapse.js"></script><!-- Accordion JS -->
-    <script src="../libs/javascript/vendor/jquery.sticky.js"></script>
 </head>
 
 <body>
-
     <div class="skip-nav">
         <a class="screenreader screenreader--focusable" href="">Skip to content</a> <a class="screenreader screenreader--focusable" href="">Skip to footer</a>
     </div>
@@ -158,6 +151,7 @@
 
         </div>
   </div>
+
     <footer class="main-footer" data-track-zone="footer" id="footer">
         <div class="main-footer__content flex-row js-equal-height">
     
@@ -172,6 +166,6 @@
 
         </div>
     </footer>
+    <script src="../libs/javascript/core.js"></script>
 </body>
 </html>
-
