Added various modal links to the index page.

--- a/public/index.html
+++ b/public/index.html
@@ -102,6 +102,12 @@
                           <li><a href="toolbar.html">Content toolbar</a></li>
                       </ul>
                       <li><a href="tables.html">Tables</a></li>
+                      <li>Modals</li>
+                      <ul>
+                          <li><a href="extent.html">Extent Switcher</a></li>
+                          <li><a href="overlay.html">Modal/Overlay</a></li>
+                          <li><a href="reference.html">Reference tool</a></li>
+                      </ul>
                       <li><a href="typography.html">Typography</a></li>
                       <li><a href="colours.html">Colours</a></li>
                       <li><a href="callout.html">Callout</a></li>
