--- a/public/extent.html
+++ b/public/extent.html
@@ -175,7 +175,7 @@
                                       <input type="radio" name="radio" value="?lang=cy">Northern Ireland
                                     </label>
                                   </fieldset>
-                                  <button type="submit" class="btn btn-primary" id="closeSimple">Continue <span class="right-button-icon"></span></button>
+                                  <button type="submit" class="btn btn-primary right-button-icon" id="closeSimple">Continue</button>
                               </form>
                         </div>
                 </div>
