Mostly button fixes

--- a/public/forms.html
+++ b/public/forms.html
@@ -236,11 +236,11 @@
                     <label for="exampleInputFile">Radio buttons (description)</label>
                     <label class="radio radio--block">
                       <input type="radio" name="radio-description" value="option1" checked>
-                      <p><span>Yes</span><br>You are in situation A</p>
+                      <p><span>Yes</span><br>I'm in situation A</p>
                     </label>
                     <label class="radio radio--block">
                       <input type="radio" name="radio-description" value="option2">
-                      <p><span>Yes</span><br>You are in situation B</p>
+                      <p><span>Yes</span><br>I'm in situation B</p>
                     </label>
                     <label class="radio radio--block">
                       <input type="radio" name="radio-description" value="option3">
@@ -321,6 +321,24 @@
                   <button type="button" class="btn btn-success">Success</button>
                   <button type="button" class="btn btn-warning exclamation-button-icon">Warning</button>
                   <button type="button" class="btn btn-primary-outline">England</button>
+                </div>
+
+                <div class="example-box-plain">
+                  <label for="buttonDescription">Buttons (small)</label>
+                  <button type="button" class="btn btn-disabled btn-small" disabled>Continue</button>
+                  <button type="button" class="btn btn-small--green">Success</button>
+                  <button type="button" class="btn btn-small--red">Delete</button>
+                  <button type="button" class="btn btn-small">Basic</button>
+                </div>
+
+
+                <div class="example-box-plain">
+                  <label for="buttonDescription">Buttons (group)</label>
+                  <div class="btn-group">
+                    <button type="button" class="btn">Left</button>
+                    <button type="button" class="btn">Middle</button>
+                    <button type="button" class="btn">Right</button>
+                  </div>
                 </div>
 
                 </form>
