--- a/public/long-form.html
+++ b/public/long-form.html
@@ -100,7 +100,7 @@
                     </h1>
                     <div class="title__subheading">
                         This advice is for
-                        <a href="" id="showSimpleModal" class="btn btn-primary-outline">England</a>
+                        <a href="" id="showSimpleModal" class="btn btn-primary-outline btn-small">England</a>
                         <!-- Other buttons
                         <a href="" id="showSimpleModal" class="btn btn-primary-outline">Scotland</a>
                         <a href="" id="showSimpleModal" class="btn btn-primary-outline">Wales</a>
