--- a/public/reference.html
+++ b/public/reference.html
@@ -328,7 +328,7 @@
                 <button type="button" class="btn btn-primary-light">Close</button>
                 <button type="button" class="btn btn-primary">Clear All</button>
                 <div class="btn-group">
-                    <button type="button" class="btn btn-primary">Load</button><button type="button" class="btn btn-primary">Save</button><button type="button" class="btn btn-primary">Copy</button>
+                    <button type="button" class="btn btn-secondary">Load</button><button type="button" class="btn btn-secondary">Save</button><button type="button" class="btn btn-secondary">Copy</button>
                 </div>
             </div>
         </div>
