Fixed existing pages to exclude the sidebar

--- a/public/index.html
+++ b/public/index.html
@@ -82,6 +82,9 @@
             </div>
           </div>
         </div>
+        <section class="print-only">
+          <h2>This section is print only</h2>
+        </section>
       </div>
     </div>
     <footer data-track-zone="footer" id="footer" class="main-footer">
